--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.31.0"
+    "sharp": "^0.31.0",
+    "socket.io": "^4.5.3"
   }
 }
