--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_MODE=PROD nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "sharp": "^0.31.0",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "xss-clean": "^0.1.1"
   }
 }
