--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
+    "ioredis": "^5.2.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
