--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node":"14.x"
   },
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon server.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "start:prod": "NODE_MODE=PROD nodemon server.js"
   },
   "keywords": [],
