--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "academind-rest",
+  "name": "academlinks",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,7 @@
     "start:prod": "NODE_MODE=PROD nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "JohnRuss",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
