--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,16 @@
             "src": "/(.*)",
             "dest": "index.js"
         }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
+                }
+            ]
+        }
     ]
 }
