--- a/vercel.json
+++ b/vercel.json
@@ -18,25 +18,45 @@
     ],
     "headers": [
         {
-            "source": "/(.*)",
-            "headers": [
-                {
-                    "key": "Access-Control-Allow-Credentials",
-                    "value": "true"
-                },
-                {
-                    "key": "Access-Control-Allow-Origin",
-                    "value": "*"
-                },
-                {
-                    "key": "Access-Control-Allow-Methods",
-                    "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-                },
-                {
-                    "key": "Access-Control-Allow-Headers",
-                    "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-                }
-            ]
+          "source": "/service-worker.js",
+          "headers" : [
+            {
+              "key" : "Cache-Control",
+              "value" : "public, max-age=0, must-revalidate"
+            }
+          ]
+        },
+        {
+          "source": "/(.*)",
+          "headers" : [
+            {
+              "key" : "X-Content-Type-Options",
+              "value" : "nosniff"
+            },
+            {
+              "key" : "X-Frame-Options",
+              "value" : "DENY"
+            },
+            {
+              "key" : "X-XSS-Protection",
+              "value" : "1; mode=block"
+            }
+          ]
+        },
+        {
+          "source": "/:path*",
+          "has": [
+            {
+              "type": "query",
+              "key": "authorized"
+            }
+          ],
+          "headers": [
+            {
+              "key": "x-authorized",
+              "value": "true"
+            }
+          ]
         }
-    ]
+      ]
 }
