--- a/vercel.json
+++ b/vercel.json
@@ -1,62 +1,42 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
         {
-            "src": "index.js",
-            "use": "@vercel/node"
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
         },
         {
-            "src": "package.json",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js"
-        }
-    ],
-    "headers": [
-        {
-          "source": "/service-worker.js",
-          "headers" : [
-            {
-              "key" : "Cache-Control",
-              "value" : "public, max-age=0, must-revalidate"
-            }
-          ]
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         },
         {
-          "source": "/(.*)",
-          "headers" : [
-            {
-              "key" : "X-Content-Type-Options",
-              "value" : "nosniff"
-            },
-            {
-              "key" : "X-Frame-Options",
-              "value" : "DENY"
-            },
-            {
-              "key" : "X-XSS-Protection",
-              "value" : "1; mode=block"
-            }
-          ]
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
         },
         {
-          "source": "/:path*",
-          "has": [
-            {
-              "type": "query",
-              "key": "authorized"
-            }
-          ],
-          "headers": [
-            {
-              "key": "x-authorized",
-              "value": "true"
-            }
-          ]
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
         }
       ]
+    }
+  ]
 }
