--- a/vercel.json
+++ b/vercel.json
@@ -10,15 +10,10 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ],
   "headers": [
     {
       "source": "/(.*)",
+      "dest": "index.js",
       "headers": [
         {
           "key": "Access-Control-Allow-Credentials",
