--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
       "source": "/(.*)",
       "headers": [
         {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
           "key": "Access-Control-Allow-Credentials",
           "value": "true"
         },
