--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "pug": "^3.0.2",
     "sharp": "^0.31.3",
     "socket.io": "^4.5.3",
     "xss-clean": "^0.1.1"
