--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
     "sharp": "^0.31.3",
